--- a/Technology report/Introduction.tex
+++ b/Technology report/Introduction.tex
@@ -1,3 +1,4 @@
+% chktex-file 44
 % --------------------------------------------------
 % 1 Introduction
 % --------------------------------------------------
