--- a/Technology report/Extras.tex
+++ b/Technology report/Extras.tex
@@ -1,5 +1,3 @@
-\section{Extras}
-
 In this chapter, we will discuss how our website is compliant with the accessibility and
 SEO guidelines. In order to evaluate such compliance, we have used the WAVE and
 Lighthouse web evaluation tools.
@@ -122,7 +120,7 @@ We've implemented comprehensive meta tags across all pages to improve search eng
     \item \textbf{Title tags}: Each page has a unique, descriptive title that includes relevant keywords (e.g., "About Us | Our Studio \& Philosophy | Lotus Haven")
     \item \textbf{Meta descriptions}: Custom descriptions summarize each page's content and purpose for search engine results
     \item \textbf{Viewport meta tag}: Properly configured to ensure mobile-friendly display with "width=device-width, initial-scale=1"
-    \item \textbf{Document \texttt{<head>}}: Well-structured with appropriate tags and prioritized loading
+    \item \textbf{Document} \texttt{<head>}: Well-structured with appropriate tags and prioritized loading
 \end{itemize}
 
 \paragraph{Semantic Content Structure}
