--- a/Technology report/Report.tex
+++ b/Technology report/Report.tex
@@ -127,15 +127,13 @@
 \frontmatter % Use roman page numbering style (i, ii, iii, iv...) for the preamble pages
 
 \puttitle{
-	title=Title, % Title of the thesis
-	name=Name Surname, % Author Name and Surname
-	course=Xxxxxxx Engineering - Ingegneria Xxxxxxx, % Study Programme (in Italian)
-	ID  = 000000,  % Student ID number (numero di matricola)
-	advisor= Prof. Name Surname, % Supervisor name
-	coadvisor={Name Surname, Name Surname}, % Co-Supervisor name, remove this line if there is none
-	academicyear={20XX-XX},  % Academic Year
-} % These info will be put into your Title page 
-
+	title={Technology Report\\Lotus Haven}, % Title of the report
+	name={\\Zeynep Erbaysal, Sebastian Perea,\\Daniel Ruiz, Giacomo Scampini}, % Author Names and Surnames
+	course={Hypermedia Applications (Web and Multimedia)}, % Course name
+	ID={11035715, 10986638, 10988760, 10764570},  % Student ID numbers
+	academicyear={2024-25},  % Academic Year
+    advisor={\url{https://lotus-haven.vercel.app/}}, % Advisor Name
+} 
 %----------------------------------------------------------------------------
 %	PREAMBLE PAGES: ABSTRACT (inglese e italiano), EXECUTIVE SUMMARY
 %----------------------------------------------------------------------------
@@ -144,23 +142,14 @@
 
 % ABSTRACT IN ENGLISH
 \chapter*{Abstract} 
-Here goes the Abstract in English of your thesis followed by a list of keywords.
-The Abstract is a concise summary of the content of the thesis (single page of text)
-and a guide to the most important contributions included in your thesis.
-The Abstract is the very last thing you write.
-It should be a self-contained text and should be clear to someone who hasn't (yet) read the whole manuscript.
-The Abstract should contain the answers to the main scientific questions that have been addressed in your thesis.
-It needs to summarize the adopted motivations and the adopted methodological approach as well as the findings of your work and their relevance and impact.
-The Abstract is the part appearing in the record of your thesis inside POLITesi,
-the Digital Archive of PhD and Master Theses (Laurea Magistrale) of Politecnico di Milano.
-The Abstract will be followed by a list of four to six keywords.
-Keywords are a tool to help indexers and search engines to find relevant documents.
-To be relevant and effective, keywords must be chosen carefully.
-They should represent the content of your work and be specific to your field or sub-field.
-Keywords may be a single word or two to four words. 
+This technology report documents the development of Lotus Haven, a modern web application for a yoga studio designed to provide a seamless and accessible digital experience. The project implements a responsive single-page application using Vue.js and Nuxt.js, featuring server-side rendering for improved performance and SEO. The website showcases yoga activities, teacher profiles, and studio information through an intuitive user interface optimized for both desktop and mobile devices.
+
+The development process followed best practices in modern web development, including component-based architecture, responsive design, accessibility compliance, and search engine optimization. The report details the technological choices, project structure, component library, and implementation strategies used throughout the development process. Special attention has been given to accessibility features, earning a 96\% score in Lighthouse evaluations, and comprehensive SEO implementation.
+
+The resulting application effectively represents a yoga studio's digital presence with an emphasis on user experience, performance, and maintainability. The report serves as documentation for the project's technical aspects and design decisions, providing insights into the development approach and implementation techniques.
 \\
 \\
-\textbf{Keywords:} here, the keywords, of your thesis % Keywords
+\textbf{Keywords:} Vue.js, Nuxt.js, Web Accessibility, Responsive Design, Component Architecture, Server-Side Rendering
 
 %----------------------------------------------------------------------------
 %	LIST OF CONTENTS/FIGURES/TABLES/SYMBOLS
