--- a/Technology report/Report.tex
+++ b/Technology report/Report.tex
@@ -133,6 +133,8 @@
 	ID={11035715, 10986638, 10988760, 10764570},  % Student ID numbers
 	academicyear={2024-25},  % Academic Year
     advisor={\url{https://lotus-haven.vercel.app/}}, % Advisor Name
+    coadvisor={Hypermedia Applications (Web and Multimedia)},
+	github={\url{https://github.com/sebaxe07/LotusHaven}}
 } 
 %----------------------------------------------------------------------------
 %	PREAMBLE PAGES: ABSTRACT (inglese e italiano), EXECUTIVE SUMMARY
